--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,6 +1,6 @@
 <div class="aux-container">
     <a id="nav-toggle" href="#sidr"></a>
-    <a id="search-toggle-icon"></a>
+    <a id="search-toggle"></a>
 </div>
 
 <header class="header-container clearfix">
