--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -7,11 +7,11 @@
     	{% unless page.sidebar == false %}
     	<aside>
 			{% if site.simple_search %}
-			  	<div id="search">
+			  	<div class="search-container">
 					<form action="http://google.com/search" method="get">
 						<fieldset role="search">
 							<input type="hidden" name="q" value="site:blog.alexharr.is" />
-							<input class="search" type="text" name="q" results="0" placeholder=""/>
+							<input class="search-field" type="text" name="q" results="0" placeholder=""/>
 							<input class="submit" type="submit" value=""/>
 						</fieldset>
 					</form>
