Updated the image paths, and added back in call to custom/head.html

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -4,5 +4,5 @@
 </div>
 
 <header class="header-container clearfix">
-        <a href="/"><img src="/img/ah-frame.svg" onerror="this.onerror=null; this.src='ah-frame.png'"></a>
+        <a href="/"><img src="/images/ah-frame.svg" onerror="this.onerror=null; this.src='ah-frame.png'"></a>
 </header>
