--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -27,5 +27,6 @@
   <script src="{{ root_url }}/javascripts/octopress.js" type="text/javascript"></script>
   <script src="{{ root_url }}/javascripts/jquery.sidr.min.js"></script>
   <script src="{{ root_url }}/javascripts/ah-blue.js"></script>
+  {% include custom/head.html %}
   {% include google_analytics.html %}
 </head> 
